--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "examprojet-1",
   "version": "1.0.0",
   "description": "\"calculatrice immo\"",
-  "main": "\"index.html\"",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"electron ."
   },
   "author": "",
   "license": "ISC",
